# bot-telegram-obsidian-capture

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  ROADMAP.md  TECH-STACK.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
docs/: ROADMAP.md  SETUP-GUIDE.md  docs-registry.yaml
docs/prps/: PRP-001-telegram-obsidian-capture.md
docs/user-guide/: README.md  api-reference.md  feature-capture.md  feature-tasks.md  getting-started.md  how-to-daily-notes.md
scripts/: install.sh  telegram-capture.service
src/: __init__.py  bot.py  config.py
src/handlers/: __init__.py  commands.py  document.py  photo.py  text.py  video.py  voice.py
src/services/: daily_notes.py  file_manager.py  note_writer.py  task_manager.py  transcription.py  video_processor.py
tests/: conftest.py  test_commands.py  test_config.py  test_daily_notes.py  test_file_manager.py  test_handlers.py  test_note_writer.py  test_task_manager.py  test_transcription.py  test_video_processor.py
